Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108221

QAudioOutput crashes on Qt 6

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.4.3, 6.5.0, 6.5, 6.6.0
    • 6.4.0
    • Multimedia
    • None
    • Linux/X11
    • ab49644be (dev), 18ba8ff68 (6.5), efb90dbca (6.4)

      This program works on Qt 5, but crashes on Qt 6 (segfault)

       

      #include <QAudioOutput>

      int main() {

          auto* foo = new QAudioOutput();

      }

       

      cmake_minimum_required(VERSION 3.23)

      project(foo)

      find_package(Qt6 COMPONENTS Multimedia REQUIRED)

      add_executable(main main.cpp)

      target_link_libraries(main Qt6::Multimedia)

       

      I'm using Gentoo Linux, amd64

       

      Stacktrace:

      (gdb) bt full
      #0 0x00007ffff7f28d64 in QMediaDevices::audioOutputs () at /mnt/portagetmp/portage/dev-qt/qtmultimedia-6.4.0/work/qtmultimedia-everywhere-src-6.4.0/src/multimedia/qmediadevices.cpp:133
      No locals.
      #1 0x00007ffff7f28f45 in QMediaDevices::defaultAudioOutput () at /mnt/portagetmp/portage/dev-qt/qtmultimedia-6.4.0/work/qtmultimedia-everywhere-src-6.4.0/src/multimedia/qmediadevices.cpp:190
      {{ outputs = {<QListSpecialMethods<QAudioDevice>> = {<QListSpecialMethodsBase<QAudioDevice>> =

      {<No data fields>}

      , <No data fields>}, d = {d = 0x18, ptr = 0x0, size = 93824992235925}}}}
      #2 0x00007ffff7f0548a in QAudioOutput::QAudioOutput (this=0x555555581730, parent=0x0) at /mnt/portagetmp/portage/dev-qt/qtmultimedia-6.4.0/work/qtmultimedia-everywhere-src-6.4.0/src/multimedia/audio/qaudiooutput.cpp:54
      No locals.
      #3 0x00005555555551ba in main () at /tmp/foo/main.cpp:5
      {{ foo = 0x7ffff73c1f20 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS_resourceGlobalData> >::instance()::holder>}}

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            piotr Piotr Srebrny (Inactive)
            darthgandalf Alexey Sokolov
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes