Provide default implementation for QPlatformMediaDevices

In case no audio backend is available we should provide some default
implementation for QPlatformDevices otherwise the code crashes on
an attempt list audio devices.

As a bonus clean some leftovers of video devices interface.

Fixes: QTBUG-108221
Change-Id: I8d7e5ebe2ec98ba9381fae429f359b8ffaea3bb6
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit ab49644bea444d105e6fa6ca246f21eccd7a67e0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>