src/multimedia/wasm/qwasmmediadevices.cpp
@@ -38,11 +38,6 @@ QList<QAudioDevice> QWasmMediaDevices::audioOutputs() const
     return m_outs;
 }
 
-QList<QCameraDevice> QWasmMediaDevices::videoInputs() const
-{
-    return {};
-}
-
 QPlatformAudioSource *QWasmMediaDevices::createAudioSource(const QAudioDevice &deviceInfo,
                                                            QObject *parent)
 {
